[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 256 )

[node name="enemy" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 2, 2 )
polygon = PoolVector2Array( 5, -5.6, 7, -4.6, 7, -2.4, 5, -1.4, 5, 1, 5.6, 1, 7.6, 5, 5.6, 5, 4.6, 7, -5, 7, -5, 5.6, -7, 4.6, -7, 2.4, -5, 1.4, -5, -1, -5.6, -1, -7.6, -5, -5.4, -5, -5, -5.4, -5, -7, 5, -7 )

[node name="DetectRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
